<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:onClick="addActivityPage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="false"
            app:srcCompat="@drawable/add" />

        <TextView
            android:id="@+id/tvAddWidgets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/add_widgets"
            android:textColor="@color/colorAccentDark"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:onClick="moodsActivityPage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivMood"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="false"
            app:srcCompat="@drawable/happy" />

        <TextView
            android:id="@+id/tvMoods"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/moods"
            android:textColor="@color/colorAccentDark"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:onClick="settingActivityPage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:clickable="false"
            app:srcCompat="@drawable/settings" />

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/colorAccentDark"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>